chore(security): 优化安全配置和权限校验，完善接口权限控制
- WebSocket 配置支持环境变量控制允许来源域名
- AI 控制器和点赞相关接口增加认证权限注解
- 点赞接口不再传入 userId，改用上下文获取当前用户
- 评论接口请求体增加字段校验注解
- 管理员权限增加邮件测试和重建索引接口保护
- 全局异常处理统一日志记录并隐藏内部异常信息
- Nginx 配置新增严格的安全响应头
- 修正接口文档路径及部署状态说明
- 前端点赞接口调用调整为不传 userId
- ArticleDetail 组件增加路由参数变化监听用于刷新文章
- 项目版本号升级到 1.0.1
- ES 索引服务代码修正兼容性问题